tests/machine/x/ocaml/update_stmt.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/update_stmt.ml", line 27, characters 2-3:
27 |   ) people
       ^
Error: Syntax error


Context (around line 27):
  25 |       if (age >= 18) then { __it with status = "adult"; age = (age + 1) } else __it
  26 |     ) __it
  27 |   ) people
  28 | assert ((people = [{ name = "Alice"; age = 17; status = "minor" };{ name = "Bob"; age = 26; status = "adult" };{ name = "Charlie"; age = 19; status = "adult" };{ name = "Diana"; age = 16; status = "minor" }]))
  29 | print_endline "ok";
